Updated User Name

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <!-- Top Section of Post -->
           <header>
             <img src="./assets/img/pic2.jpg" />
-            <strong>i.am.iron_man</strong>
+            <strong>i.am.the.king</strong>
             <svg
               color="currentcolor"
               fill="currentcolor"
