Changed Comment on 2nd post

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
           
           <!-- Post description -->
           <div class="description">
-            <strong>sam.the.ferret</strong> I Love This !
+            <strong>sam.the.ferret</strong> This is soo cute !
           </div>
           
           <!-- View comment button -->
